--- a/pokedex.html
+++ b/pokedex.html
@@ -1,15 +1,34 @@
-class pokemon
-{
-    constructor(numDex = 0, nome = 'padrao', regiao = 'padrao', tipos = [], favorito = false)
-    /*
-        construtor do pokemon necessario fazer 2 classes uma para o 
-        o pokemon em si e uma para os status para assim evitar linhas desnecessarias
-    */
-    {
-        this.numDex = numDex;
-        this.nome = nome;
-        this.regiao = regiao;
-        this.tipos = tipos;
-        this.favorito = favorito;
-    }
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>poketopzera</title>
+    <link rel="stylesheet" href="pokedex.css">
+</head>
+<body>
+    <nav id="navegar">
+        <div>
+            <a class="logo" href="#">POkedex</a>
+        </div>
+        <div class="opcoes">
+                <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Início</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Sobre</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Serviços</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contato</a>
+        </li>
+      </ul>
+        </div>
+    </nav>
+
+    
+</body>
+</html>
