botoes esquerda e alteraçao tamanho(boxvermelha)

--- a/codigos/pokeall.html
+++ b/codigos/pokeall.html
@@ -11,7 +11,21 @@
         <div class="box-vermelha">
             <div class="titulo">POKEDEX</div>
             <section>
-                <div class="conteudo"></div>
+                <div class="conteudo">
+                    <div class="left-btn">
+                        <form action="">
+                            <label for="busca">
+                                <input type="search" id="busca" name="procura" placeholder="Digite o nome do pokemon!" value="">
+                            </label>
+                            <button type="submmit" id="botaoSubmit">Search</button>
+                        </form>
+                        <ol>
+                            
+                            <button id="random">Random</button>
+                            <button id="settings">Settings</button>
+                        </ol>
+                    </div>
+                </div>
             </section>
         </div>
     </section>
