estilizaçao btoes esquerdo

--- a/codigos/pokeall.html
+++ b/codigos/pokeall.html
@@ -22,6 +22,7 @@
                         <ol>
                             
                             <button id="random">Random</button>
+                            <button id="music">Music</button>
                             <button id="settings">Settings</button>
                         </ol>
                     </div>
