--- a/codigos/pokedex.html
+++ b/codigos/pokedex.html
@@ -1,35 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>poketopzera</title>
+    <title>Poketopzera</title>
+
+    <!-- CSS -->
     <link rel="stylesheet" href="pokedex.css">
+
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 <body>
-     <nav id="navegar">
-        <div class="conteudo">
-  <div class="container-principal">
-            <div>
-                <a class="logo" href="#">POkedex</a>
-            </div>
-            <div class="opcoes">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Início</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Sobre</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Serviços</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contato</a>
-                    </li>
-                </ul>
-                </div>
-            </div>
-        </nav>
+
+    <nav id="navegar">
+        <div class="container-principal">
+            <a class="logo" href="#">POkedex</a>git
+            <ul class="navbar-nav fica">
+                <li><a class="nav-link active" href="#">Início</a></li>
+                <li><a class="nav-link" href="#">Sobre</a></li>
+                <li><a class="nav-link" href="#">Serviços</a></li>
+                <li><a class="nav-link" href="#">Contato</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
