fiz os pokemons aparecerem

--- a/codigos/pokeall.html
+++ b/codigos/pokeall.html
@@ -29,6 +29,12 @@
                     </div>
                 </div>
             </section>
+
+            <section>
+                <div id="listaPokemon" class="row">
+                    
+                </div>
+            </section>
         </div>
     </section>
     <script src="Pokedex.js"></script>
