--- a/codigos/pokeall.html
+++ b/codigos/pokeall.html
@@ -32,10 +32,12 @@
 
             <section>
                 <div id="listaPokemon" class="row">
-                    
+
                 </div>
             </section>
         </div>
+
+        <div id="buscaPronta" class="escondido"></div>
     </section>
     <script src="Pokedex.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js" integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y" crossorigin="anonymous"></script>
