--- a/codigos/pokedex.html
+++ b/codigos/pokedex.html
@@ -8,23 +8,47 @@
     <!-- CSS -->
     <link rel="stylesheet" href="pokedex.css">
 
+    <!--ICONES-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 <body>
 
-    <nav id="navegar">
-        <div class="container-principal">
-            <a class="logo" href="#">POkedex</a>git
-            <ul class="navbar-nav fica">
-                <li><a class="nav-link active" href="#">Início</a></li>
-                <li><a class="nav-link" href="#">Sobre</a></li>
-                <li><a class="nav-link" href="#">Serviços</a></li>
-                <li><a class="nav-link" href="#">Contato</a></li>
-            </ul>
+    <header>
+        <nav class="navBar">
+            <div class="logoBar">
+                <img src="pokebola.png" alt="Nao foi possivel carregar a imagem">
+            </div>
+
+            <div class="textobar">
+                <h2>Pokedex</h2>
+            </div>
+
+            <div class="linkBar">
+                <button><i class="fa-solid fa-house" style="color: #281f41;"></i>home</button>
+                <button>Pokédex</button>
+                <button>Favoritos</button>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+
+    <nav id="botoes" class="position-relative">
+        <div class="botao position-absolute top-50 start-50 translate-middle">
+            <form action="GET" id="form-busca">
+                <label for="busca"> <input type="search" id="busca" name="procura" placeholder="Digite o nome do pokemon" value="">
+
+                </label>
+                <button type="submit" id="botaoSubmit">Procurar</button>
+            </form>
         </div>
     </nav>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    <script src="Pokedex.js"></script>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js" integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y" crossorigin="anonymous"></script>
 </html>
