fiz aparecer a busca em ambas as paginas, fiz uma classe escondido para o card de busca

--- a/codigos/poke.html
+++ b/codigos/poke.html
@@ -10,16 +10,13 @@
 <body>
     <nav id="botoes" class="position-relative">
         <div class="botao position-absolute top-50 start-50 translate-middle">
-            <form action="GET" id="form-busca">
+            <form action="" id="form-busca">
                 <label for="busca"> <input type="search" id="busca" name="procura" placeholder="Digite o nome do pokemon" value="">
                 </label>
                 <button type="submit" id="botaoSubmit">Procurar</button>
             </form>
         </div>
     </nav>
-    <div id="resultado">
-
-    </div>
     <script src="Pokedex.js"></script>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
