--- a/codigos/pokeall.html
+++ b/codigos/pokeall.html
@@ -17,11 +17,11 @@
             <section>
                 <div class="conteudo">
                     <div class="left-btn">
-                        <form action="">
+                        <form action="" id="form-busca">
                             <label for="busca">
                                 <input type="search" id="busca" name="procura" placeholder="Digite o nome do pokemon!" value="">
                             </label>
-                            <button type="submmit" id="botaoSubmit">Search</button>
+                            <button type="submit" id="botaoSubmit">Search</button>
                         </form>
                         <ol>
 
@@ -37,21 +37,17 @@
             </section>
 
             <section>
-                <div id="listaPokemon" class="row">
+                <div id="buscaPokemon" class="row justify-content-end">
 
                 </div>
             </section>
         </div>
 
-        <div id="buscaPronta" class="escondido"></div>
+        <div id="buscaPronta" class="col-12 col-md-4 mb-3"></div>
     </section>
+    
     <script src="Pokedex.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js" integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-
-    <script src="Pokedex.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js" integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-
 </body>
 </html>
