quase pronta favoritos e busca consertada

--- a/codigos/poke.html
+++ b/codigos/poke.html
@@ -28,7 +28,7 @@
 
             <div class="linkBar">
                 <button><i class="fa-solid fa-house"></i>home</button>
-                <button><i class="fa-solid fa-book"></i>Pokédex</button>
+                <button onclick="window.location.href='pokeall.html'"><i class="fa-solid fa-book"></i>Pokédex</button>
                 <button><i class="fa-solid fa-star"></i>Favoritos</button>
                 <button><i class="fa-solid fa-user"></i></button>
                 </div>
