--- a/codigos/poke.html
+++ b/codigos/poke.html
@@ -11,6 +11,10 @@
     <!--ICONES-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
+    <!--FONTE-->
+    <link href="https://fonts.cdnfonts.com/css/pokemon-solid" rel="stylesheet">
+
+
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
@@ -40,10 +44,12 @@
     <nav id="botoes" class="position-relative">
         <div class="botao position-absolute top-50 start-50 translate-middle">
             <form action="GET" id="form-busca">
+                <h1 class="titulo">  Pokedex</h1>
                 <label for="busca"> <input type="search" id="busca" name="procura" placeholder="Digite o nome do pokemon" value="">
 
                 </label>
                 <button type="submit" id="botaoSubmit">Procurar</button>
+                <h3 class="subtitulo">DESCUBRA O MUNDO POKEMON</h3>
             </form>
         </div>
     </nav>
