fiz minha parte inteira, vou fazer as imagens so para mes que vem

--- a/codigos/pokeall.html
+++ b/codigos/pokeall.html
@@ -26,8 +26,8 @@
                         <ol>
 
                             <button id="random">Random</button>
-                            <button id="music">Music</button>
-                            <button id="settings">Settings</button>
+                            <button id="favs">Favoritos</button>
+                            <button id="mostrarDex">Pokedex</button>
                         </ol>
                     </div>
                     <section>
