--- a/codigos/pokeall.html
+++ b/codigos/pokeall.html
@@ -4,54 +4,76 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="pokeall.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-
     <title>pokedex</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-
 </head>
 <body>
     <section>
         <div class="box-vermelha">
             <div class="titulo">POKEDEX</div>
+                <div class="bolinhas-topo">
+                    <div class="bolinha azul"></div>
+                    <div class="bolinha vermelha"></div>
+                    <div class="bolinha amarela"></div>
+                    <div class="bolinha verde"></div>
+                </div>
             <section>
                 <div class="conteudo">
                     <div class="left-btn">
+                        <div class="bolinhas-pesquisa">
+                            <div class="bolinha vermelha"></div>
+                            <div class="bolinha amarela"></div>
+                            <div class="bolinha verde"></div>
+                        </div>
                         <form action="">
                             <label for="busca">
-                                <input type="search" id="busca" name="procura" placeholder="Digite o nome do pokemon!" value="">
+                                <input type="search" id="busca" name="procura" placeholder="Search..." value="">
                             </label>
-                            <button type="submmit" id="botaoSubmit">Search</button>
+                            <button type="submmit" id="botaoSubmit">
+                                <i class="fa-solid fa-search"></i>
+                                Search
+                            </button>
                         </form>
-                        <ol>
 
-                            <button id="random">Random</button>
-                            <button id="music">Music</button>
-                            <button id="settings">Settings</button>
+                        <ol>
+                            <button id="random">
+                                <i class="fa-solid fa-random"></i>
+                                Random
+                            </button>
+                            <button id="music">
+                                <i class="fa-solid fa-volume-high"></i>
+                                Music
+                            </button>
+                            <button id="settings">
+                                <i class="fa-solid fa-gear"></i>
+                                Settings
+                            </button>
                         </ol>
                     </div>
+
                     <section>
-                        <div id="listaPokemon" class="row tamanho"></div>
+                        <div>
+                            <nav class="navbarra">
+                                <div class="bolinhas">
+                                    <div class="bolinha" style="background-color: #ff5f56;"></div>
+                                    <div class="bolinha" style="background-color: #ffbd2e;"></div>
+                                    <div class="bolinha" style="background-color: #27c93f;"></div>
+                                </div>
+                                <div class="texto">1025 Pokemons</div>
+                            </nav>
+                        </div>
+                        <div id="listaPokemon" class="row"></div>
                     </section>
                 </div>
             </section>
-
-            <section>
-                <div id="listaPokemon" class="row">
-
-                </div>
-            </section>
         </div>
-
-        <div id="buscaPronta" class="escondido"></div>
     </section>
-    <script src="Pokedex.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js" integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+
+    <div id="buscaPronta" class="escondido"></div>
 
     <script src="Pokedex.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js" integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-
 </body>
 </html>
