mudei os botoes para os certos

--- a/codigos/pokeall.html
+++ b/codigos/pokeall.html
@@ -30,7 +30,7 @@
                             <label for="busca">
                                 <input type="search" id="busca" name="procura" placeholder="Search..." value="">
                             </label>
-                            <button type="submmit" id="botaoSubmit">
+                            <button type="submit" id="botaoSubmit">
                                 <i class="fa-solid fa-search"></i>
                                 Search
                             </button>
@@ -41,13 +41,13 @@
                                 <i class="fa-solid fa-random"></i>
                                 Random
                             </button>
-                            <button id="music">
-                                <i class="fa-solid fa-volume-high"></i>
-                                Music
+                            <button id="favs">
+                                <i class="fa-solid fa-star"></i>
+                                Favoritos
                             </button>
-                            <button id="settings">
-                                <i class="fa-solid fa-gear"></i>
-                                Settings
+                            <button id="mostrarDex">
+                                <i class="fa-solid fa-book-open"></i>
+                                Pokedex
                             </button>
                         </ol>
                     </div>
