--- a/codigos/poke.html
+++ b/codigos/poke.html
@@ -44,6 +44,7 @@
     <nav id="botoes" class="position-relative">
         <div class="botao position-absolute top-50 start-50 translate-middle">
             <form action="" id="form-busca">
+                <h1 class="titulo">POKEDEX</h1>
                 <label for="busca"> <input type="search" id="busca" name="procura" placeholder="Digite o nome do pokemon" value="">
 
                 </label>
