arrumei a dex e busca

--- a/codigos/pokeall.html
+++ b/codigos/pokeall.html
@@ -26,7 +26,7 @@
                             <div class="bolinha amarela"></div>
                             <div class="bolinha verde"></div>
                         </div>
-                        <form action="">
+                        <form action="" id="form-busca">
                             <label for="busca">
                                 <input type="search" id="busca" name="procura" placeholder="Search..." value="">
                             </label>
@@ -49,6 +49,10 @@
                                 <i class="fa-solid fa-book-open"></i>
                                 Pokedex
                             </button>
+                            <button onclick="window.location.href='poke.html'" id="home">
+                                <i class="fa-solid fa-house"></i>
+                                Home
+                            </button>
                         </ol>
                     </div>
 
@@ -60,7 +64,7 @@
                                     <div class="bolinha" style="background-color: #ffbd2e;"></div>
                                     <div class="bolinha" style="background-color: #27c93f;"></div>
                                 </div>
-                                <div class="texto">1025 Pokemons</div>
+                                <div class="texto">386 Pokemons</div>
                             </nav>
                         </div>
                         <div id="listaPokemon" class="row"></div>
