comecei a arrumar a responsividade

--- a/codigos/pokeall.html
+++ b/codigos/pokeall.html
@@ -37,19 +37,19 @@
                         </form>
 
                         <ol>
-                            <button id="random">
+                            <button id="random" class="btn-resposivo">
                                 <i class="fa-solid fa-random"></i>
                                 Random
                             </button>
-                            <button id="favs">
+                            <button id="favs" class="btn-resposivo">
                                 <i class="fa-solid fa-star"></i>
                                 Favoritos
                             </button>
-                            <button id="mostrarDex">
+                            <button id="mostrarDex" class="btn-resposivo">
                                 <i class="fa-solid fa-book-open"></i>
                                 Pokedex
                             </button>
-                            <button onclick="window.location.href='poke.html'" id="home">
+                            <button onclick="window.location.href='poke.html'" id="home" class="btn-resposivo">
                                 <i class="fa-solid fa-house"></i>
                                 Home
                             </button>
