--- a/codigos/pokeall.html
+++ b/codigos/pokeall.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="pokeall.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="pokeall.css">
     <title>pokedex</title>
 </head>
 <body>
@@ -57,7 +58,7 @@
                     </div>
 
                     <section>
-                        <div>
+                        <div id="dessaDiv" class="centroColUni">
                             <nav class="navbarra">
                                 <div class="bolinhas">
                                     <div class="bolinha" style="background-color: #ff5f56;"></div>
@@ -66,15 +67,18 @@
                                 </div>
                                 <div class="texto">386 Pokemons</div>
                             </nav>
+                            <!--o fim da div estava aqui-->
+                            <div id="listaPokemon" class="row"></div>
                         </div>
-                        <div id="listaPokemon" class="row"></div>
                     </section>
                 </div>
             </section>
         </div>
     </section>
 
-    <div id="buscaPronta" class="escondido"></div>
+    <div id="buscaPronta" class="escondido">
+
+    </div>
 
     <script src="Pokedex.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js" integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y" crossorigin="anonymous"></script>
