ta quase pronto telas pequenas

--- a/codigos/pokeall.html
+++ b/codigos/pokeall.html
@@ -30,7 +30,7 @@
                         </div>
                         <form action="" id="form-busca">
                             <label for="busca">
-                                <input type="search" id="busca" name="procura" placeholder="Search..." value="">
+                                <input type="search" id="busca" name="procura" placeholder="Procure..." value="">
                             </label>
                             <button type="submit" id="botaoSubmit">
                                 <i class="fa-solid fa-search"></i>
