--- a/codigos/pokeall.html
+++ b/codigos/pokeall.html
@@ -11,7 +11,7 @@
     <title>pokedex</title>
 </head>
 <body>
-    <section>
+    <section class="menos400">
         <div class="box-vermelha">
             <div class="titulo">POKEDEX</div>
                 <div class="bolinhas-topo">
@@ -58,7 +58,7 @@
                         </ol>
                     </div>
 
-                    <section>
+                    <section class="menos400">
                         <div id="dessaDiv" class="centroColUni">
                             <nav class="navbarra">
                                 <div class="bolinhas">
