foi arrumado acerca das responsividades de tela grande

--- a/codigos/pokeall.html
+++ b/codigos/pokeall.html
@@ -28,9 +28,9 @@
                             <div class="bolinha amarela"></div>
                             <div class="bolinha verde"></div>
                         </div>
-                        <form action="" id="form-busca">
+                        <form action="" id="form-busca" class="btn-resposivo">
                             <label for="busca">
-                                <input type="search" id="busca" name="procura" placeholder="Search..." value="">
+                                <input type="search" id="busca"  name="procura" placeholder="Search..." value="">
                             </label>
                             <button type="submit" id="botaoSubmit">
                                 <i class="fa-solid fa-search"></i>
@@ -39,7 +39,7 @@
                         </form>
 
                         <ol>
-                            <button id="random" class="btn-resposivo">
+                            <button id="random">
                                 <i class="fa-solid fa-random"></i>
                                 Random
                             </button>
