Add class 'menos400' to section in pokeall.html

--- a/codigos/pokeall.html
+++ b/codigos/pokeall.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <!--vtnmc-->
-    <section>
+    <section class = "menos400">
         <div class="box-vermelha">
             <div class="titulo">POKEDEX</div>
                 <div class="bolinhas-topo">
