--- a/codigos/apagarDepois/auas.html
+++ b/codigos/apagarDepois/auas.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="soparaver.css">
+    <link rel="stylesheet" href="soparaver.css">    
     <title>pokedex</title>
 </head>
 <body>
@@ -28,7 +28,7 @@
                             <div class="bolinha amarela"></div>
                             <div class="bolinha verde"></div>
                         </div>
-                        <form action="" id="form-busca">
+                        <form id="form-busca">
                             <label for="busca">
                                 <input type="search" id="busca" name="procura" placeholder="Procure..." value="">
                             </label>
@@ -74,12 +74,10 @@
                     </section>
                 </div>
             </section>
+            <div id="buscaPronta" class="escondido"></div>
         </div>
     </section>
 
-    <div id="buscaPronta" class="escondido">
-
-    </div>
 
     <script type = "module" src="javascript/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js" integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y" crossorigin="anonymous"></script>
