--- a/codigos/poke.html
+++ b/codigos/poke.html
@@ -33,7 +33,7 @@
             <div class="linkBar">
                     <button><i class="fa-solid fa-house"></i>home</button>
                     <button onclick="window.location.href='pokeall.html'"><i class="fa-solid fa-book"></i>Pokédex</button>
-                    <button onclick="irFavs()" id="btnFav"><i class="fa-solid fa-star"></i>Favoritos</button><!--quando for os modulos colocar o id id="btnFavoritos" no btn-->
+                    <button id="btnFav"><i class="fa-solid fa-star"></i>Favoritos</button><!--quando for os modulos colocar o id id="btnFavoritos" no btn-->
                     <button><i class="fa-solid fa-user"></i></button>
                 </div>
             </div>
@@ -43,7 +43,7 @@
 
     <nav id="botoes" class="position-relative">
         <div class="botao position-absolute top-50 start-50 translate-middle">
-            <form action="" id="form-busca">
+            <form action="" id="form-busca-home">
                 <h1 class="titulo">POKEDEX</h1>
                 <label for="busca"> <input type="search" id="busca" name="procura" placeholder="Digite o nome do pokemon" value="">
 
@@ -53,7 +53,7 @@
             </form>
         </div>
     </nav>
-    <script src="Pokedex.js"></script>
+    <script type = "module" src="javascript/main.js"></script>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
